restore logger