@@ -14,7 +14,6 @@ public class LogcatLogger {
 
     private static Thread loggerThread;
     private static boolean running = false;
-    private static java.lang.Process logcatProcess; // keep reference to destroy later
 
     public static void start(Context context) {
         if (running) return;
@@ -30,18 +29,17 @@ public class LogcatLogger {
                 } else {
                     dir = new File(Environment.getExternalStorageDirectory(), "xodos/logs");
                 }
+
                 if (!dir.exists()) dir.mkdirs();
 
                 File logFile = new File(dir, "app.log");
                 FileWriter writer = new FileWriter(logFile, true);
 
-                // Clear logcat buffer (using ProcessBuilder for safety)
-                new ProcessBuilder("logcat", "-c").start().waitFor();
+                Runtime.getRuntime().exec("logcat -c");
 
-                // Use sh -c to run logcat (allows complex commands if needed)
-                ProcessBuilder pb = new ProcessBuilder("sh", "-c", "logcat -v time");
-                pb.redirectErrorStream(true); // merge stderr to avoid blocking
-                logcatProcess = pb.start();
+                // ⚠ IMPORTANT: java.lang.Process (fully qualified)
+                java.lang.Process logcatProcess =
+                        Runtime.getRuntime().exec(new String[]{"logcat", "-v", "time"});
 
                 BufferedReader reader = new BufferedReader(
                         new InputStreamReader(logcatProcess.getInputStream())
@@ -59,11 +57,6 @@ public class LogcatLogger {
 
             } catch (Exception e) {
                 e.printStackTrace();
-            } finally {
-                if (logcatProcess != null) {
-                    logcatProcess.destroy();
-                    logcatProcess = null;
-                }
             }
         });
 
@@ -75,10 +68,6 @@ public class LogcatLogger {
         if (loggerThread != null) {
             loggerThread.interrupt();
             loggerThread = null;
-        }
-        if (logcatProcess != null) {
-            logcatProcess.destroy();
-            logcatProcess = null;
         }
     }
 }
